# just-ocr

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.zcode/plans/: plan-sess_7f2f5610-18d4-4ee8-b3bd-08dbe6a8e5f8.md
docs/notes/: 2026-07-19-polygon-overlay.md
docs/superpowers/plans/: 2026-07-12-pdf-support.md  2026-07-18-kraken-engine.md
docs/superpowers/specs/: 2026-07-12-pdf-support-design.md  2026-07-18-kraken-engine-design.md
kraken-models/: bur_recog.safetensors  bur_segment.safetensors
src/: App.svelte  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: bench_kraken.rs  smoke_kraken.rs
src-tauri/icons/: icon.icns
src-tauri/kraken-engine/: Cargo.toml
src-tauri/kraken-engine/src/: boundaries.rs  containers.rs  contours.rs  detect.rs  heatmap.rs  inference_candle.rs  inference_helpers.rs  lib.rs  model_meta.rs  preprocess.rs  reading_order.rs  vectorize.rs
src-tauri/kraken-engine/src/ndimage/: morphology.rs
src-tauri/kraken-engine/src/polygon/: mod.rs
src-tauri/kraken-engine/src/recognition/: codec.rs  decode.rs  meta.rs  mod.rs  model.rs  preprocess.rs
src-tauri/kraken-engine/src/segmentation_candle/: model.rs
src-tauri/src/: engine.rs  languages.rs  lib.rs  main.rs  pdf.rs  tesseract_line.rs  tesseract_page.rs
src-tauri/src/kraken/: boundaries.rs  config.rs  contours.rs  detect.rs  heatmap.rs  inference_candle.rs  mod.rs  reading_order.rs  vectorize.rs
src-tauri/src/kraken/ndimage/: filters.rs  mcp.rs  mod.rs
src-tauri/src/kraken/polygon/: boolean.rs
src-tauri/src/kraken/recognition/: meta.rs  model.rs
src-tauri/src/kraken/segmentation_candle/: mod.rs  model.rs
src/lib/: LanguageManager.svelte  Output.svelte  PdfModeDialog.svelte  Preview.svelte  Thumbnail.svelte  Toolbar.svelte  hocr.ts  ocr.test.ts  ocr.ts  result.ts
