[package]
name = "just-ocr"
version = "0.1.0"
description = "Offline Tesseract OCR GUI"
authors = ["you"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "just_ocr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# NOTE: kraken-engine is a path dependency but deliberately NOT a workspace
# member. `[profile.dev.package."*"] opt-level = 3` below only applies to
# non-workace deps — so keeping kraken-engine outside the workspace means it
# gets optimized in dev builds (the vendored neural-network code is 10-15×
# slower unoptimized). If we make it a workspace member, it falls back to the
# unoptimized dev profile and OCR takes ~30s/image instead of ~3s.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tesseract-rs = { version = "0.3", features = ["embed-tessdata"] }
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["io-util"] }
# PDF image extraction: lopdf walks page resources; flate2/fax decode the
# common compressed image streams (FlateDecode, CCITTFaxDecode). The `image`
# crate (above) handles JPEG decode and PNG re-encode.
lopdf = { version = "0.43", default-features = false }
# Parallel page decoding in PDF extract mode (pdf.rs). Each page's image is
# decoded/re-encoded independently, so a rayon work pool gives a near-linear
# speedup on multi-page scans without touching the (already internally
# parallel) render path.
rayon = "1"
flate2 = "1"
fax = "0.2"
# Optional PDF page renderer (used when the user picks "render" mode). hayro
# interprets the page content stream and rasterizes it; we scale to a 1500px
# page height regardless of MediaBox size, so oversized pages render at a sane
# resolution for OCR.
hayro = "0.7"
# Kraken OCR engine (vendored from kraken-rust, candle-only path). Lives in its
# own workspace crate so dev builds optimize it like any other dependency.
kraken-engine = { path = "kraken-engine" }
anyhow = "1"
log = "0.4"
once_cell = "1"
# env_logger backs the log macros in dev. Default level info so the per-stage
# OCR timing logs print without setting RUST_LOG; bump with RUST_LOG=debug.
env_logger = "0.11"

# CPU rasterization (hayro/vello_cpu) is 30-50× slower unoptimized; in
# `cargo tauri dev` (debug) that makes PDF render mode unusably slow. Optimize
# all dependency crates in debug builds so dev stays responsive, while keeping
# the just-ocr crate itself unoptimized (fast app rebuilds, debug assertions on).
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Forked tesseract-rs with a one-line macOS build fix: the upstream build
# script sets CMAKE_CXX_FLAGS without -mmacosx-version-min, so Xcode 26+ SDKs
# reject tesseract 5.x's use of std::filesystem (introduced in macOS 10.15)
# during the libtesseract compile. The cmake Rust crate auto-injects the flag
# for CMAKE_C_FLAGS but skips CXX when the build script sets it explicitly.
# Patch pinned to tag v0.3.0-macos-fix on pndaza/tesseract-rs.
# Upstream PR: TODO (track once filed against cafercangundogdu/tesseract-rs).
[patch.crates-io]
tesseract-rs = { git = "https://github.com/pndaza/tesseract-rs.git", tag = "v0.3.0-macos-fix" }
