[package]
name = "kraken-engine"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "kraken_engine"
path = "src/lib.rs"

[dependencies]
candle-core = "0.11"
candle-nn = "0.11"
ndarray = "0.16"
image = "0.25"
imageproc = { version = "0.25", default-features = false }
geo = "0.29"
anyhow = "1"
log = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
